--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ log4j = "2.25.3"
 jline = "3.25.0"
 jansi = "2.4.1"
 sshd = "2.15.0"
+shadow = "9.3.0"
 
 [libraries]
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
@@ -37,3 +38,4 @@ cli = ["jline", "jansi"]
 ssh = ["sshd-core", "sshd-scp", "sshd-sftp"]
 [plugins]
 buildconfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildconfig" }
+shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
