--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@
 # https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_configuration_properties
 org.gradle.configuration-cache=true
 defaultSshPort=2233
-defaultShellName=SYSTEM
+defaultShellName=Unnamed App
 defaultBannerLocation=banner.txt
