refactor!: change the way commands are handled.
Layers do not hold any logic anymore and are only used for app
structure.
Flags are not Exceptions anymore.

--- a/.gitignore
+++ b/.gitignore
@@ -321,7 +321,7 @@ pyrightconfig.json
 !src/**/build/
 
 # Ignore Gradle GUI config
-gradle-app.setting
+gradle-bifroestApp.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
